Atualização com novas experiências profissionais

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" media="print"
         onload="this.media='all'" />
     <noscript>
@@ -101,11 +102,12 @@
                         • Brasil</span>
                 </div>
                 <div class="socials">
-                    <a class="social-icon" href="https://www.linkedin.com/in/rafael-ferreira93" target="_blank" rel="noopener noreferrer"
-                        aria-label="LinkedIn">
+                    <a class="social-icon" href="https://www.linkedin.com/in/rafael-ferreira93" target="_blank"
+                        rel="noopener noreferrer" aria-label="LinkedIn">
                         <i class="fa-brands fa-linkedin fa-fw"></i>
                     </a>
-                    <a class="social-icon" href="https://github.com/rafaelchampion" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                    <a class="social-icon" href="https://github.com/rafaelchampion" target="_blank"
+                        rel="noopener noreferrer" aria-label="GitHub">
                         <i class="fa-brands fa-github fa-fw"></i>
                     </a>
                 </div>
@@ -352,6 +354,115 @@
             <section id="career" class="section career">
                 <h1 data-translate-key="career_title">💼 Carreira</h1>
                 <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-date" data-translate-key="job9_date">Ago. 2025 - Presente</div>
+                        <div class="timeline-content">
+                            <div class="timeline-title">
+                                <h2 data-translate-key="job9_title">
+                                    Engenheiro de Software Sênior</h2>
+                                <h3 class="timeline-subtitle">
+                                    <i class="fa-solid fa-fw fa-building-flag"></i>
+                                    <span data-translate-key="job9_company">OMIE</span>
+                                </h3>
+                            </div>
+                            <div class="timeline-body">
+                                <ul>
+                                    <li data-translate-key="job9_description_1">
+                                        Atuo na manutenção e modernização de um dos ERPs mais robustos e amplamente
+                                        utilizados do Brasil, com forte foco em módulos fiscais e em sistemas impactados
+                                        pela reforma tributária brasileira.
+                                    </li>
+                                    <li data-translate-key="job9_description_2">
+                                        Trabalho contribuindo para a migração de funcionalidades desenvolvidas com
+                                        ferramentas visuais legadas (CoreBuilder) para arquiteturas web modernas, com
+                                        grande ênfase em performance, estabilidade e compatibilidade retroativa.
+                                    </li>
+                                    <li data-translate-key="job9_description_3">
+                                        Contribuo ativamente para a otimização de consultas em banco de dados, incluindo
+                                        análise de planos de execução, criação e ajuste de índices e refinamento de
+                                        queries críticas de performance.
+                                    </li>
+                                    <li data-translate-key="job9_description_4">
+                                        Atuo próximo aos processos fiscais e de gestão empresarial, incluindo controle de
+                                        estoque, compras, vendas e fluxos tributários, garantindo conformidade com regras
+                                        de negócio e requisitos legais.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-date" data-translate-key="job8_date">Jun. 2025 - Ago. 2025</div>
+                        <div class="timeline-content">
+                            <div class="timeline-title">
+                                <h2 data-translate-key="job8_title">
+                                    Desenvolvedor .NET Sênior</h2>
+                                <h3 class="timeline-subtitle">
+                                    <i class="fa-solid fa-fw fa-building-flag"></i>
+                                    <span data-translate-key="job8_company">CWI (Consultoria) • Bankly</span>
+                                </h3>
+                            </div>
+                            <div class="timeline-body">
+                                <ul>
+                                    <li data-translate-key="job8_description_1">
+                                        Atuei na modernização de código legado para um banco digital brasileiro em
+                                        crescimento, contribuindo para a evolução de uma arquitetura monolítica para
+                                        padrões baseados em microsserviços.
+                                    </li>
+                                    <li data-translate-key="job8_description_2">
+                                        Participei da migração e reestruturação de componentes do sistema, apoiando a
+                                        adoção de soluções escaláveis, resilientes e orientadas à nuvem.
+                                    </li>
+                                    <li data-translate-key="job8_description_3">
+                                        Contribuí na implementação e manutenção de AWS Lambda e na definição de
+                                        infraestrutura como código utilizando Terraform.
+                                    </li>
+                                    <li data-translate-key="job8_description_4">
+                                        Atuei com filas de mensagens e eventos assíncronos, além da implementação de
+                                        mecanismos de segurança (antifraude) para o setor financeiro.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-date" data-translate-key="job7_date">Abr. 2025 - Jun. 2025</div>
+                        <div class="timeline-content">
+                            <div class="timeline-title">
+                                <h2 data-translate-key="job7_title">
+                                    Desenvolvedor .NET Especialista</h2>
+                                <h3 class="timeline-subtitle">
+                                    <i class="fa-solid fa-fw fa-building-flag"></i>
+                                    <span data-translate-key="job7_company">Gestionna (Consultoria) • Eicon</span>
+                                </h3>
+                            </div>
+                            <div class="timeline-body">
+                                <ul>
+                                    <li data-translate-key="job7_description_1">
+                                        Integrei uma squad responsável pela modernização de um ERP do setor público
+                                        voltado à gestão educacional municipal, contribuindo para a migração de uma
+                                        arquitetura legada em .NET Framework (WebForms) para .NET 8.
+                                    </li>
+                                    <li data-translate-key="job7_description_2">
+                                        Atuei na análise técnica de recursos, funcionalidades e regras de negócio entre
+                                        os módulos do sistema, apoiando a definição e execução do plano de migração.
+                                    </li>
+                                    <li data-translate-key="job7_description_3">
+                                        Participei ativamente da migração de aproximadamente 50 módulos do ERP,
+                                        realizando refatoração e limpeza de código legado, aplicando Clean Code e
+                                        princípios SOLID.
+                                    </li>
+                                    <li data-translate-key="job7_description_4">
+                                        Atuei na mitigação de riscos de segurança, melhoria da performance de consultas
+                                        ao banco de dados e desacoplamento de dependências entre classes.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="timeline-item">
                         <div class="timeline-date" data-translate-key="job6_date">Abr. 2021 - Presente</div>
                         <div class="timeline-content">
@@ -691,12 +802,14 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a href="https://github.com/rafaelchampion/Utilbox" target="_blank" rel="noopener noreferrer" class="button">
+                            <a href="https://github.com/rafaelchampion/Utilbox" target="_blank"
+                                rel="noopener noreferrer" class="button">
                                 <i class="devicon-github-original"></i>
                                 <span data-translate-key="view_github">View on GitHub</span>
                                 <i class="nf nf-oct-link_external center"></i>
                             </a>
-                            <a href="https://www.nuget.org/packages?q=Utilbox" target="_blank" rel="noopener noreferrer" class="button">
+                            <a href="https://www.nuget.org/packages?q=Utilbox" target="_blank" rel="noopener noreferrer"
+                                class="button">
                                 <i class="nf nf-dev-nuget center"></i>
                                 <span data-translate-key="view_nuget">View on
                                     Nuget.org</span>
@@ -853,7 +966,8 @@
                             <tr>
                                 <td>
                                     <div class="img-flag-container">
-                                        <img class="img-flag" src="static/img/flags/bra.webp" loading="lazy" alt="Bandeira do Brasil">
+                                        <img class="img-flag" src="static/img/flags/bra.webp" loading="lazy"
+                                            alt="Bandeira do Brasil">
                                     </div>
                                 </td>
                                 <td style="width: 80%;">
@@ -1061,27 +1175,24 @@
                 <br />
                 <h3 data-translate-key="interests_ai_title" class="gradient-text">Inteligência artificial</h3>
                 <p data-translate-key="interests_ai_1">
-                    Você entraria em um prédio cujo projeto arquitetônico foi feito 100% com inteligência artificial,
-                    sem a avaliação de um engenheiro? Claro que a utilização de IA no trabalho, em diversas áreas criou
-                    um murmúrio muito grande nos últimos anos.</p>
-                <p data-translate-key="interests_ai_2">Muito se fala em substituir desenvolvedores por IA, porém
-                    vamos lembrar que não se substituíram os engenheiros civis com o AutoCad. Da mesma forma que o
-                    AutoCad otimizou o trabalho do engenheiro, a IA é uma ferramenta valiosa no processo de
-                    desenvolvimento. Ela é ainda mais transformadora pois ela agiliza a escrita
-                    de código,
-                    auxilia na correção de bugs, e nos permite focar nos desafios <i>humanos</i>.</p>
-                <p data-translate-key="interests_ai_3">Esta é a palavra chave
-                    aqui. Devemos nos lembrar sempre que a essência do conhecimento que os
-                    grandes modelos de linguagem de IA possuem, foi treinada e embasada no conhecimento humano. Por
-                    mais inteligente que a máquina seja, ela não pode substituir a criatividade e humanidade empregada
-                    em resolver problemas e encontrar soluções simples para desafios como a arquitetura de sistemas
-                    complexos, a compreensão profunda das necessidades do usuário e a tomada de decisões
-                    estratégicas.</p>
-                <p data-translate-key="interests_ai_4">A área da tecnologia está em constante evolução, e IA é a mais
-                    nova e grandiosa delas. Cabe a nós nos
-                    adaptarmos, evoluir nossa forma de trabalhar, sermos cada vez mais criteriosos com código,
-                    analíticos, e decidir onde e quando precisamos de código de máquina, e os momentos em que é preciso
-                    um toque humano.</p>
+                    A IA é uma ferramenta poderosa que está remodelando nossa indústria. Assim como o CAD revolucionou a
+                    engenharia, os
+                    aceleradores de IA permitem que os desenvolvedores foquem em desafios arquiteturais de alto nível e
+                    na resolução
+                    criativa de problemas.</p>
+                <p data-translate-key="interests_ai_2">Abraço a IA como um multiplicador de produtividade. Ela auxilia
+                    na prototipagem rápida, geração de código repetitivo e
+                    depuração, mas não substitui a compreensão profunda da lógica de negócios e das necessidades do
+                    usuário.</p>
+                <p data-translate-key="interests_ai_3">A essência da engenharia de software reside na empatia humana e
+                    na tomada de decisões estratégicas. A IA serve como um
+                    copiloto que lida com a rotina, nos liberando para construir soluções mais robustas e centradas no
+                    ser humano.</p>
+                <p data-translate-key="interests_ai_4">Estar à frente significa adaptar-se a essas novas ferramentas.
+                    Estou comprometido em utilizar a IA de forma responsável
+                    para entregar código de maior qualidade com mais rapidez, mantendo o pensamento crítico e a
+                    criatividade que definem a
+                    grande engenharia.</p>
                 <br />
             </section>
             <section id="socials" class="section">
@@ -1092,11 +1203,12 @@
                     nos links abaixo.</p>
                 <br />
                 <div class="social-links">
-                    <a class="social-icon" href="https://www.linkedin.com/in/rafael-ferreira93" target="_blank" rel="noopener noreferrer"
-                        aria-label="LinkedIn">
+                    <a class="social-icon" href="https://www.linkedin.com/in/rafael-ferreira93" target="_blank"
+                        rel="noopener noreferrer" aria-label="LinkedIn">
                         <i class="nf nf-fa-linkedin"></i>
                     </a>
-                    <a class="social-icon" href="https://github.com/rafaelchampion" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                    <a class="social-icon" href="https://github.com/rafaelchampion" target="_blank"
+                        rel="noopener noreferrer" aria-label="GitHub">
                         <i class="nf nf-md-github"></i>
                     </a>
                 </div>
